--- a/app/src/main/res/layout/item_match.xml
+++ b/app/src/main/res/layout/item_match.xml
@@ -5,6 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
+    <TextView
+        android:id="@+id/matchId"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Match ID"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/team1Name"
@@ -14,7 +22,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/team1Score"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/matchId"/>
 
     <TextView
         android:id="@+id/team2Name"
@@ -33,7 +41,8 @@
         android:text="0"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/team1Name"
+        app:layout_constraintTop_toBottomOf="@+id/matchId" />
 
     <TextView
         android:id="@+id/team2Score"
