--- a/app/src/main/res/menu/menus.xml
+++ b/app/src/main/res/menu/menus.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:icon="@drawable/football"
+
         android:id="@+id/menu_item_layout1"
         android:title="Logout"/>
+    <item
+        android:id="@+id/menu_item_standings"
+        android:title="Teams Standings"
+        />
 </menu>
