--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#04A30B</color>
     <color name="yellow">#F8DF05</color>
+    <color name="divider_color">#FF000000</color> <!-- Black color -->
+
 </resources>
