--- a/app/src/main/res/layout/fragment_add_player_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_player_dialog.xml
@@ -12,6 +12,13 @@
         android:hint="Enter player name"
         android:inputType="text"
         android:minHeight="48dp" />
+    <EditText
+        android:id="@+id/editTextPlayerPosition"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter player position"
+        android:inputType="text"
+        android:minHeight="48dp" />
 
     <Button
         android:id="@+id/buttonAddPlayer"
