--- a/app/src/main/res/menu/menus.xml
+++ b/app/src/main/res/menu/menus.xml
@@ -8,4 +8,8 @@
         android:id="@+id/menu_item_standings"
         android:title="Teams Standings"
         />
+    <item
+        android:id="@+id/menu_item_players"
+        android:title="Players Stats"
+        />
 </menu>
