Players stats by team

--- a/app/src/main/res/layout/activity_player_stats.xml
+++ b/app/src/main/res/layout/activity_player_stats.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
+
+    <Spinner
+        android:id="@+id/team_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:spinnerMode="dropdown"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <include
         android:id="@+id/headerLayout"
@@ -24,12 +33,5 @@
         android:layout_weight="1"
         android:scrollbars="vertical" />
 
-    <TextView
-        android:id="@+id/noDataTextView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:text="No standings available"
-        android:textSize="16sp"
-        android:layout_gravity="center"/>
+
 </LinearLayout>
